added All Plants page with pagination and filters by category and edibility, Plant Detail page with related plants by category, create, update, and delete plant pages, search functionality, and template inheritance.

--- a/Planteer/main/templates/main/home.html
+++ b/Planteer/main/templates/main/home.html
@@ -1,12 +1,16 @@
 {% extends 'main/base.html' %}
-{% load static %} 
+{% load static %}
 
 {% block content %}
-    <div class="search">
-        <img src="" class="search-image">
+    <div class="page-container">
         <div class="search-container">
-            <input type="text" placeholder="search.." class="search-input">
-            <button class="search-button">Search</button>
+            <form action="{% url 'main:search_results' %}" method="get" class="search-container">
+                <input type="text" name="query" placeholder="Search..." class="search-input" required>
+                <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
+            </form>
+        </div>
+        <div class="image-container">
+            <img src="{% static 'images/leaf.jpg' %}" alt="Right Image" class="right-image">
         </div>
     </div>
 {% endblock %}
