--- a/Planteer/main/static/css/styles.css
+++ b/Planteer/main/static/css/styles.css
@@ -1,14 +1,13 @@
 :root {
     --primary-color: #557C55;
     --secondary-color: #5F7464;
-    --background-color: #E4AEC5;
+    --background-color: #DB6B97;
     --text-color: #243D25;
 }
 
 html, body {
     height: 100%;
     margin: 0;
-    padding: 20px;
     font-family: "Raleway", sans-serif;
 }
 
@@ -25,13 +24,18 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: var(--text-color);
     padding-bottom: 15px;
     border-bottom: 1px solid var(--primary-color);
+    padding: 20px;
 }
 
 .header-container h2 {
     margin: 0;
+    color: var(--text-color);
+}
+
+.material-symbols-outlined {
+    color: var(--background-color);
 }
 
 nav {
@@ -75,38 +79,29 @@ nav a:hover {
 }
 
 footer {
-    color: var(--text-color);
-    justify-content: space-between;
-    align-items: center;
     border-top: 1px solid var(--primary-color);
+    padding: 20px;
+    text-align: center;
+    color: var(--text-color);
+    
 }
 
 .footer-container {
-    max-width: 1200px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-}
-
-.footer-left {
-    width: 40%;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .footer-left h3 {
-    margin-bottom: 15px;
-}
-
-.footer-right {
-    width: 50%;
+    margin: 0;
 }
 
 .footer-right ul {
+    display: flex;
     list-style: none;
-}
-
-.footer-right ul li {
-    margin-bottom: 10px;
+    gap: 10px;
 }
 
 .footer-right a {
@@ -115,50 +110,106 @@ footer {
 }
 
 .footer-right a:hover {
-    text-decoration: underline;
+    color: var(--secondary-color);
 }
 
-.search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
+.footer-right i {
+    margin-right: 5px;
+}
+
+.footer-right {
+    width: 50%;
+}
+
+.pagination-container {
     width: 100%;
-    height: 400px;
-    background: url('/static/images/back2.jpg') no-repeat center center;
-    background-size: cover;
-    border-radius: 8px;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.pagination-button {
+    position: absolute;
+    top: 100%;
+    transform: translateY(-50%);
+}
+
+.pagination-container a:first-child {
+    left: 0%; 
+}
+
+.pagination-container a:last-child {
+    right: 0; 
+}
+.page-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
+.page-container {
+    height: calc(100vh - 60px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
 }
 
 .search-container {
+    width: 60%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    z-index: 2;
+    padding: 40px;
 }
 
 .search-input {
     padding: 10px;
-    margin-right: 10px;
     font-size: 16px;
-    width: 550px;
+    width: 60%;
     border-radius: 5px;
-    border: 2px solid #dddddd72;
-    background-color: rgba(255, 255, 255, 0.438);
+    border: 2px solid #dddddd;
+    background-color: rgba(255, 255, 255, 0.7);
+    margin-right: 10px;
+    display: inline-block;
 }
 
 .search-button {
-    padding: 10px 20px;
-    background-color: var(--primary-color);
-    color: white;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background: none;
+    color: green;
     border: none;
-    border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 18px;
+    transition: color 0.3s;
 }
 
 .search-button:hover {
-    background-color: var(--secondary-color);
+    color: darkgreen;
+}
+
+
+.image-container {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.right-image {
+    width: 700px;
+    height: 1200px;
+    border-radius: 8px;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .container {
@@ -166,7 +217,6 @@ footer {
     margin: 0 auto;
     padding-top: 30px;
 }
-
 
 form {
     background-color: #ffffff;
@@ -225,7 +275,6 @@ form h2 {
     border-color: var(--secondary-color);
 }
 
-
 #id_native_to {
     width: 100%;
     padding: 10px;
@@ -281,3 +330,156 @@ button.dropdown-toggle {
 button.dropdown-toggle:focus {
     box-shadow: none;
 }
+
+.plant-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-between;
+    margin-bottom: 20px; 
+}
+
+.plant-card {
+    width: calc(33.333% - 20px);
+    height: 400px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+   
+}
+
+.plant-card:hover {
+    transform: translateY(-10px);
+}
+
+.plant-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.plant-detail {
+    padding: 40px;
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.plant-detail h1 {
+    font-size: 2.5rem;
+    color: #557C55;
+    margin-bottom: 20px;
+}
+
+.plant-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+}
+
+.plant-info {
+    flex: 1;
+    max-width: 60%;
+    color: #333;
+    text-align: left;
+}
+
+.plant-image {
+    flex: 1;
+    max-width: 30%;
+    text-align: left;
+} 
+
+.plant-image img {
+    max-width: 300px;
+    height: auto;
+    border-radius: 8px;
+    margin-top: 10px;
+    padding: 20px;
+
+}
+
+.plant-info p {
+    margin-bottom: 15px;
+    font-size: 1.1rem;
+    line-height: 1.5;
+}
+
+.plant-detail-back {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    text-decoration: none;
+    color: #557C55;
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin-top: 20px;
+}
+
+.plant-detail-back i {
+    font-size: 1.2rem;
+    transition: transform 0.3s;
+}
+
+.plant-detail-back:hover i {
+    transform: translateX(-5px);
+}
+.related-plants {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+}
+
+.related-plant-card {
+    width: 200px; 
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+
+}
+
+.related-plant-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.related-plant-card img, .related-plant-card .card-img-top {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 5px 5px 0 0;
+
+}
+
+.related-plant-card .card-body {
+    padding: 15px;
+    
+}
+
+.related-plant-card .card-title {
+    font-size: 1.1rem;
+    margin-bottom: 10px;
+}
+
+.related-plant-card .btn-link {
+    padding: 0;
+    font-size: 0.9rem;
+    color: var(--primary-color);
+}
+
+.related-plant-card .btn-link:hover {
+    text-decoration: underline;
+}
+
