--- a/Planteer/plants/templates/plants/all_plants.html
+++ b/Planteer/plants/templates/plants/all_plants.html
@@ -2,30 +2,76 @@
 {% load static %}
 
 {% block content %}
-    <div>
+    <div class="container">
         <h1>All Plants</h1>
-        <div>
-            {% for plant in plants %}
-                <div>
-                    <div>
-                        <div>
-                            <h3>{{ plant.title }}</h3> 
+        <form method="GET" action="{% url 'plants:all_plants_view' %}" class="form-inline mb-3">
+            <div class="form-group mr-3">
+                <label for="category" class="mr-2">Category:</label>
+                <select name="category" id="category" class="form-control">
+                    <option value="">Select Category</option>
+                    {% for value, label in categories %}
+                        <option value="{{ value }}">{{ label }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <div class="form-group mr-3">
+                <label for="is_edible" class="mr-2">Is Edible:</label>
+                <select name="is_edible" id="is_edible" class="form-control">
+                    <option value="">Select</option>
+                    <option value="True">Yes</option>
+                    <option value="False">No</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary mr-2">Filter</button>
+            <form method="POST" action="{% url 'plants:all_plants_view' %}">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-primary">Clear</button>
+            </form>            
+        </form>
+        
+        <div class="pagination-container d-flex justify-content-between mt-4">
+            {% if plants.has_previous %}
+                <a href="?page={{ plants.previous_page_number }}" class="btn btn-outline-primary pagination-button">
+                    <span class="material-icons-outlined">arrow_back_ios</span>
+                </a>
+            {% else %}
+                <span></span> 
+            {% endif %}
+        
+            {% if plants.has_next %}
+                <a href="?page={{ plants.next_page_number }}" class="btn btn-outline-primary pagination-button">
+                    <span class="material-icons-outlined">arrow_forward_ios</span>
+                </a>
+            {% else %}
+                <span></span> 
+            {% endif %}
+        </div>
+
+        {% if plants %}
+            <div class="plant-grid row">
+                {% for plant in plants %}
+                    <div class="plant-card col-md-4 mb-4">
+                        <div class="card h-100">
+                            <h3 class="card-title">{{ plant.title }}</h3>
                             {% if plant.image %}
-                                <img src="{{ plant.image.url }}">
+                                <img src="{{ plant.image.url }}" alt="{{ plant.title }}" class="card-img-top">
                             {% else %}
                                 <p>No image available</p>
                             {% endif %}
-                        </div>
-                        <div>
-                            <p>{{ plant.short_description }}</p>
-                            <p><strong>Category:</strong> {{ plant.category }}</p>
+                            <div class="card-body">
+                                <p class="card-text">{{ plant.short_description }}</p>
+                                <p class="card-text"><strong>Category:</strong> {{ plant.category }}</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="{% url 'plants:plant_detail_view' plant_id=plant.id %}" class="btn btn-link">Show More</a>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <a href="{% url 'plants:plant_detail_view' plant_id=plant.id %}">Show More</a>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
+                {% endfor %}
+            </div>
+        {% else %}
+            <p class="text-center mt-5">No plants found matching your criteria.</p>
+        {% endif %}
     </div>
 {% endblock %}
