--- a/Planteer/main/templates/main/base.html
+++ b/Planteer/main/templates/main/base.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
+    <link rel="icon" type="image/jpg" href="{% static 'images/icon-leaf.png' %}">
 
     <title>{% block title %}Page Title{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -16,13 +17,13 @@
 <body>
     <header>
         <div class="header-container">
-            <h2>Planteer....</h2>
+            <h1>Planteer</h1>
         </div>
         <nav>
             <ul class="nav-center">
                 <li><a href="{% url 'plants:all_plants_view' %}">All Plants</a></li>
                 <li><a href="{% url 'plants:search_plants_view' %}">Search</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="{% url 'main:contact_view' %}">Contact Us</a></li>
             </ul>
             <button class="add"><a href="{% url 'plants:add_plant_view' %}">Add Plant</a></button>
         </nav>
@@ -44,12 +45,6 @@
             <div class="footer-container">
                 <div class="footer-left">
                     <h3>Planteer</h3>
-                </div>
-                <div class="footer-right">
-                    <ul>
-                        <li><a href="#"><i class="fas fa-leaf"></i> Previous</a></li>
-                        <li><a href="#">Next <i class="fas fa-leaf"></i></a></li>
-                    </ul>
                 </div>
             </div>
         </footer>
