--- a/Planteer/plants/templates/plants/all_plants.html
+++ b/Planteer/plants/templates/plants/all_plants.html
@@ -2,8 +2,16 @@
 {% load static %}
 
 {% block content %}
+<title>{% block title %}All Plants{% endblock %}</title>
     <div class="container">
-        <h1>All Plants</h1>
+        {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-success" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% endif %}
+        <h1 style="color: #DB6B97; ">All Plants</h1>
         <form method="GET" action="{% url 'plants:all_plants_view' %}" class="form-inline mb-3">
             <div class="form-group mr-3">
                 <label for="category" class="mr-2">Category:</label>
@@ -24,27 +32,37 @@
                 </select>
             </div>
             <button type="submit" class="btn btn-primary mr-2">Filter</button>
-            <form method="POST" action="{% url 'plants:all_plants_view' %}">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-primary">Clear</button>
-            </form>            
+            <button type="button" onclick="window.location.href='{% url 'plants:all_plants_view' %}'" class="btn btn-primary mr-2">Clear</button>
         </form>
-        
+        {% if request.GET.category or request.GET.is_edible %}
+        <p class="mt-3">Showing results for:
+            {% if request.GET.category %}
+                Category - {{ request.GET.category|title }}
+            {% endif %}
+            {% if request.GET.category and request.GET.is_edible %}
+                and
+            {% endif %}
+            {% if request.GET.is_edible %}
+                Edible - {% if request.GET.is_edible == "True" %}Yes{% else %}No{% endif %}
+            {% endif %}
+        </p>
+        {% endif %}
+
         <div class="pagination-container d-flex justify-content-between mt-4">
             {% if plants.has_previous %}
                 <a href="?page={{ plants.previous_page_number }}" class="btn btn-outline-primary pagination-button">
                     <span class="material-icons-outlined">arrow_back_ios</span>
                 </a>
             {% else %}
-                <span></span> 
+                <span></span>
             {% endif %}
-        
+
             {% if plants.has_next %}
                 <a href="?page={{ plants.next_page_number }}" class="btn btn-outline-primary pagination-button">
                     <span class="material-icons-outlined">arrow_forward_ios</span>
                 </a>
             {% else %}
-                <span></span> 
+                <span></span>
             {% endif %}
         </div>
 
@@ -53,7 +71,7 @@
                 {% for plant in plants %}
                     <div class="plant-card col-md-4 mb-4">
                         <div class="card h-100">
-                            <h3 class="card-title">{{ plant.title }}</h3>
+                            <h3 class="card-title"style="color: #557C55;">{{ plant.title }}</h3>
                             {% if plant.image %}
                                 <img src="{{ plant.image.url }}" alt="{{ plant.title }}" class="card-img-top">
                             {% else %}
