--- a/Planteer/main/templates/main/base.html
+++ b/Planteer/main/templates/main/base.html
@@ -21,6 +21,7 @@
         </div>
         <nav>
             <ul class="nav-center">
+                <li><a href="{% url 'main:home_view' %}">Home</a></li>
                 <li><a href="{% url 'plants:all_plants_view' %}">All Plants</a></li>
                 <li><a href="{% url 'plants:search_plants_view' %}">Search</a></li>
                 <li><a href="{% url 'main:contact_view' %}">Contact Us</a></li>
