--- a/Planteer/main/static/css/styles.css
+++ b/Planteer/main/static/css/styles.css
@@ -149,7 +149,7 @@ footer {
     font-size: 16px;
     width: 60%;
     border-radius: 5px;
-    border: 2px solid #dddddd;
+    border: 2px solid var(--background-color);
     background-color: rgba(255, 255, 255, 0.7);
     margin-right: 10px;
     display: inline-block;
@@ -605,4 +605,28 @@ button.dropdown-toggle:focus {
 
 .add-plant-btn.add-plant-btn-primary:hover {
     background-color: #5F7464;
+}
+
+.text-container {
+    position: fixed;
+    top: 20%;
+    left: 10%;
+    width: 70%;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 24px;
+    font-weight: bold;
+    color: #4CAF50; 
+    z-index: 1000;
+}
+
+.hover-text {
+    font-size: 50px;
+    font-weight: bold;
+    color: #243D25;
+    transition: transform 1.1s ease-in-out; 
+}
+
+.hover-text:hover {
+    transform: scale(1.2); 
 }
