--- a/Planteer/main/templates/main/results.html
+++ b/Planteer/main/templates/main/results.html
@@ -1,23 +1,23 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<h2>Search Results for "{{ query }}"</h2>
-
-{% if results %}
-    <ul>
-    {% for plant in results %}
-    <ul>
+<div class="container mt-5">
+    <h2 class="text-center mb-5"style="color: #DB6B97;">Search Results for "{{ query }}"</h2>
+    
+    {% if results %}
+        <ul>
         {% for plant in results %}
-            <li>
+        <ul>
+             <li>
                 <a href="{% url 'plants:plant_detail_view' plant.id %}">
                     {{ plant.title }}
                 </a>
             </li>
+        </ul>
         {% endfor %}
-    </ul>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No results found.</p>
-{% endif %}
+        </ul>
+    {% else %}
+        <p>No results found.</p>
+    {% endif %}</div>
+
 {% endblock %}
