--- a/Planteer/plants/templates/plants/all_plants.html
+++ b/Planteer/plants/templates/plants/all_plants.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-group mr-3">
-                <label for="is_edible" class="mr-2">Is Edible:</label>
+                <label for="is_edible" class="mr-2">Edibility:</label>
                 <select name="is_edible" id="is_edible" class="form-control">
                     <option value="">Select</option>
                     <option value="True">Yes</option>
