--- a/Planteer/plants/templates/plants/update_plant.html
+++ b/Planteer/plants/templates/plants/update_plant.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {% block content %}
-<title>{% block title %}New Plant{% endblock %}</title>
+<title>{% block title %}Update Plant{% endblock %}</title>
 <div class="add-plant-form-container mt-5">
-    <h2 class="text-center mb-5"style="color: #DB6B97;">Update Plant</h2>
+    <h2 class="text-center mb-5" style="color: #DB6B97;">Update Plant</h2>
     <form method="POST" enctype="multipart/form-data" class="add-plant-form">
         {% csrf_token %}
         {{ form.as_p }}
